[gd_scene load_steps=10 format=2]

[ext_resource path="res://CorpoCentipede.png" type="Texture" id=1]
[ext_resource path="res://Centipede.gd" type="Script" id=2]
[ext_resource path="res://CaldaCentipede.png" type="Texture" id=3]
[ext_resource path="res://MandibulaCentipede.png" type="Texture" id=4]
[ext_resource path="res://GlobalLight.png" type="Texture" id=5]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="CanvasItemMaterial" id=2]

[sub_resource type="CanvasItemMaterial" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 30, 30 )

[node name="Centipede" type="KinematicBody2D" groups=[
"Centipede",
]]
collision_layer = 4
collision_mask = 524315
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="Mandibula" type="Sprite" parent="Sprite"]
show_behind_parent = true
material = SubResource( 2 )
position = Vector2( 40, 0 )
rotation = 3.14159
texture = ExtResource( 4 )

[node name="Calda" type="Sprite" parent="Sprite"]
show_behind_parent = true
material = SubResource( 3 )
position = Vector2( -32, 0 )
rotation = 3.14159
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
rect = Rect2( -30, -30, 60, 60 )

[node name="Down" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -64 )
collision_mask = 9

[node name="Up" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 64 )
collision_mask = 9

[node name="Back" type="RayCast2D" parent="."]
position = Vector2( -32, 0 )
enabled = true
cast_to = Vector2( -5, 0 )
collision_mask = 4

[node name="Front" type="RayCast2D" parent="."]
position = Vector2( 32, 0 )
enabled = true
cast_to = Vector2( 5, 0 )
collision_mask = 4

[node name="DownSkin" type="RayCast2D" parent="."]
position = Vector2( 0, 30 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 4

[node name="UpSkin" type="RayCast2D" parent="."]
position = Vector2( 0, -30 )
enabled = true
cast_to = Vector2( 0, -10 )
collision_mask = 4

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -1.99204e-06, 1.90735e-06 )
scale = Vector2( 3.0888, 5.26316 )
texture = ExtResource( 5 )
texture_scale = 0.01
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
